--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/Projeto_Livraria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\jean.brum\\Desktop\\Aula11\\cadastro_candidatos\\Projeto2019B\\src\\libs\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.JCalendar.classpath}
+    ${libs.JCalendar.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
