--- a/Desktop/Livraria-master/Livraria-master/nbproject/project.properties
+++ b/Desktop/Livraria-master/Livraria-master/nbproject/project.properties
@@ -29,17 +29,6 @@ dist.jar=${dist.dir}/Projeto_Livraria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-beanutils-1.8.2.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\commons-beanutils-1.8.2.jar
-file.reference.commons-collections-3.2.1.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\commons-collections-3.2.1.jar
-file.reference.commons-dbcp-1.2.2.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\commons-dbcp-1.2.2.jar
-file.reference.commons-digester-2.1.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\commons-digester-2.1.jar
-file.reference.commons-javaflow-20060411.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\commons-javaflow-20060411.jar
-file.reference.commons-logging-1.1.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\commons-logging-1.1.jar
-file.reference.commons-math-1.0.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\commons-math-1.0.jar
-file.reference.commons-pool-1.3.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\commons-pool-1.3.jar
-file.reference.commons-pool-1.6.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\commons-pool-1.6.jar
-file.reference.commons-vfs-1.0.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\commons-vfs-1.0.jar
-file.reference.jasperreports-5.6.0.jar=C:\\Program Files (x86)\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\jasperreports-5.6.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\jean.brum\\Desktop\\Aula11\\cadastro_candidatos\\Projeto2019B\\src\\libs\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=src/libs/jcalendar-1.4.jar
 includes=**
@@ -50,17 +39,7 @@ javac.classpath=\
     ${libs.JCalendar.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.jasperreports-5.6.0.jar}:\
-    ${file.reference.commons-beanutils-1.8.2.jar}:\
-    ${file.reference.commons-collections-3.2.1.jar}:\
-    ${file.reference.commons-dbcp-1.2.2.jar}:\
-    ${file.reference.commons-digester-2.1.jar}:\
-    ${file.reference.commons-javaflow-20060411.jar}:\
-    ${file.reference.commons-logging-1.1.jar}:\
-    ${file.reference.commons-math-1.0.jar}:\
-    ${file.reference.commons-pool-1.3.jar}:\
-    ${file.reference.commons-pool-1.6.jar}:\
-    ${file.reference.commons-vfs-1.0.jar}
+    ${libs.iReport.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
